# Detect

./: .gitignore  CMakeLists.txt  README.md  SVMModel.xml  images.txt  output.txt
ball/: groundtruth.txt
ball/kcf/: images.txt  kcf_vot  output.txt  region.txt
src/: MultiDetect.cpp  MultiDetect.h  SvmTest.hpp  detect.cpp  detect.hpp  kcftracker.cpp  runtracker.cpp
